--- a/composer.json
+++ b/composer.json
@@ -26,17 +26,18 @@
         "source": "https://github.com/TheDragonCode/laravel-http-logger"
     },
     "require": {
-        "php": "^8.1",
+        "php": "^8.0",
         "doctrine/dbal": "^3.3",
         "dragon-code/support": "^5.8",
-        "illuminate/database": "^9.5",
-        "illuminate/routing": "^9.5",
-        "illuminate/http": "^9.5",
-        "illuminate/support": "^9.5"
+        "illuminate/contracts": "^8.37 || ^9.0",
+        "illuminate/database": "^8.37 || ^9.0",
+        "illuminate/http": "^8.37 || ^9.0",
+        "illuminate/routing": "^8.37 || ^9.0",
+        "illuminate/support": "^8.37 || ^9.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^7.1",
+        "orchestra/testbench": "^6.0 || ^7.0",
         "phpunit/phpunit": "^9.5"
     },
     "minimum-stability": "stable",
@@ -58,7 +59,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "DragonCode\\LaravelHttpLogger\\ServiceProvider"
+                "DragonCode\\LaravelHttpLogger\\Providers\\ServiceProvider",
+                "DragonCode\\LaravelHttpLogger\\Providers\\RouteServiceProvider"
             ]
         }
     }
