--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -16,7 +16,7 @@ jobs:
                     -   laravel: "10.0"
                         php: "8.0"
 
-        name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
+        name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}, Dragon ${{ matrix.dragon }}
 
         steps:
             -   name: Checkout code
