--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,14 +9,25 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "8.0", "8.1", "8.2" ]
-                laravel: [ "8.0", "9.0", "10.0" ]
-                dragon: [ "5.8", "6.0" ]
+                php: [ "8.0", "8.1", "8.2", "8.3" ]
+                laravel: [ "8.0", "9.0", "10.0", "11.0" ]
                 exclude:
+                    -   laravel: "8.0"
+                        php: "8.3"
+                        
+                    -   laravel: "9.0"
+                        php: "8.3"
+                        
                     -   laravel: "10.0"
                         php: "8.0"
+                        
+                    -   laravel: "11.0"
+                        php: "8.0"
+                        
+                    -   laravel: "11.0"
+                        php: "8.1"
 
-        name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}, Dragon ${{ matrix.dragon }}
+        name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
 
         steps:
             -   name: Checkout code
@@ -27,10 +38,10 @@ jobs:
                 with:
                     php-version: ${{ matrix.php }}
                     extensions: curl, mbstring, zip, pcntl, pdo, pdo_sqlite, iconv
-                    coverage: none
+                    coverage: xdebug
 
             -   name: Install dependencies
-                run: composer require --dev laravel/framework:^${{ matrix.laravel }} dragon-code/support:^${{ matrix.dragon }}
+                run: composer require --dev laravel/framework:^${{ matrix.laravel }}
 
             -   name: Execute tests
                 run: sudo vendor/bin/phpunit
