--- a/composer.json
+++ b/composer.json
@@ -40,16 +40,16 @@
         "php": "^8.0",
         "doctrine/dbal": "^3.3",
         "dragon-code/support": "^5.8 || ^6.0",
-        "illuminate/contracts": "^8.37 || ^9.0 || ^10.0 || ^11.0",
-        "illuminate/database": "^8.37 || ^9.0 || ^10.0 || ^11.0",
-        "illuminate/http": "^8.37 || ^9.0 || ^10.0 || ^11.0",
-        "illuminate/routing": "^8.37 || ^9.0 || ^10.0 || ^11.0",
-        "illuminate/support": "^8.37 || ^9.0 || ^10.0 || ^11.0"
+        "illuminate/contracts": "^8.37 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/database": "^8.37 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/http": "^8.37 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/routing": "^8.37 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/support": "^8.37 || ^9.0 || ^10.0 || ^11.0 || ^12.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "phpunit/phpunit": "^9.6 || ^10.0"
+        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "phpunit/phpunit": "^9.6 || ^10.0 || ^11.0 || ^12.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
