--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,14 +9,20 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "8.0", "8.1", "8.2", "8.3" ]
-                laravel: [ "8.0", "9.0", "10.0", "11.0" ]
+                php: [ "8.0", "8.1", "8.2", "8.3", "8.4" ]
+                laravel: [ "8.0", "9.0", "10.0", "11.0", "12.0" ]
                 exclude:
                     -   laravel: "8.0"
                         php: "8.3"
                         
+                    -   laravel: "8.0"
+                        php: "8.4"
+                        
                     -   laravel: "9.0"
                         php: "8.3"
+                        
+                    -   laravel: "9.0"
+                        php: "8.4"
                         
                     -   laravel: "10.0"
                         php: "8.0"
@@ -25,6 +31,12 @@ jobs:
                         php: "8.0"
                         
                     -   laravel: "11.0"
+                        php: "8.1"
+                        
+                    -   laravel: "12.0"
+                        php: "8.0"
+                        
+                    -   laravel: "12.0"
                         php: "8.1"
 
         name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
@@ -42,6 +54,9 @@ jobs:
 
             -   name: Install dependencies
                 run: composer require --dev laravel/framework:^${{ matrix.laravel }}
+
+            -   name: Update PHPUnit Configuration
+                run: vendor/bin/phpunit --migrate-configuration
 
             -   name: Execute tests
                 run: sudo vendor/bin/phpunit
